# sweep-dashboard

./: .gitignore  README.md  SWEEP_SCRIPT_PROTOCOL.md  pyproject.toml  requirements.txt  run_dashboard.sh  seed_nodes.py
sweep_dashboard/: app.py  config.py  crypto.py  job_dispatcher.py  models.py  node_monitor.py  ssh_manager.py  terminal.py
sweep_dashboard/static/: dashboard.js  style.css
sweep_dashboard/templates/: base.html  dashboard.html  dispatch.html  logs.html  node_detail.html  settings.html  terminal.html
tests/: test_app.py  test_config.py  test_crypto.py  test_models.py  test_ssh_manager.py
