[project]
name = "sweep-dashboard"
version = "0.1.0"
description = "Web-based dashboard to monitor, manage, and dispatch RL training sweep jobs across a heterogeneous GPU cluster."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "paramiko>=3.4.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pydantic>=2.5.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
